--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,6 +14,13 @@ button.access=Acceder
 table.header.edit=Editar
 table.header.delete=Borrar
 login.error=Usuario o contraseña incorrectos
+error.notFound.title=Error 404
+error.page.not.found=No encontramos la página que buscas
+error.ir.inicio=Ir al inicio
+error.forbidden.title=Error 403
+error.forbidden=No tiene permisos para acceder
+error.server.title=Erro 500
+error.server=Error en el servidor
 
 ##Home messages
 home.greeting=Bienvenido
