--- a/src/main/resources/messages_ga.properties
+++ b/src/main/resources/messages_ga.properties
@@ -14,7 +14,13 @@ button.access=Acceder
 table.header.edit=Editar
 table.header.delete=Borrar
 login.error=Usuario ou contrasinal incorrectos
-
+error.notFound.title=Erro 404
+error.page.not.found=Non atopamos a páxina que buscas
+error.ir.inicio=Ir ao inicio
+error.forbidden.title=Erro 403
+error.forbidden=Non tien permisos para acceder
+error.server.title=Erro 500
+error.server=Erro no servidor
 ##Home messages
 home.greeting=Benvido
 
