--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -107,3 +107,15 @@ new.vehicle.sell.price.sort=Ordenar por el precio de venta
 new.vehicle.isNew=Tipo de vehículo
 new.vehicle.cost=Precio de compra
 
+##Sells meages
+sells.sell.list=Lista de ventas
+sells.seller.name=Nombre vendedor
+sells.sell.profit=Ganancia
+sells.buyer.name=Nombre comprador
+sells.buyer.dni=DNI comprador
+sells.seller.name.sort=Ordenar por nombre del vendedor
+sells.sell.profit.sort=Ordenar por ganancia
+sells.buyer.name.sort=Ordenar por nombre del comprador
+sells.buyer.dni.sort=Ordenar por DNI del comprador
+aside.menu.sells=Ventas
+
