--- a/src/main/resources/messages_ga.properties
+++ b/src/main/resources/messages_ga.properties
@@ -103,3 +103,15 @@ new.vehicle.sell.price.sort=Ordenar polo precio de venta
 new.vehicle.edit=Editar vehículo
 new.vehicle.isNew=Tipo de vehículo
 new.vehicle.cost=Precio de compra
+
+##Sells meages
+sells.sell.list=Lista de ventas
+sells.seller.name=Nome vendedor
+sells.sell.profit=Ganancia
+sells.buyer.name=Nome comprador
+sells.buyer.dni=DNI comprador
+sells.seller.name.sort=Ordenar polo nome do vendedor
+sells.sell.profit.sort=Ordenar pola ganancia
+sells.buyer.name.sort=Ordenar polo nome do comprador
+sells.buyer.dni.sort=Ordenar polo DNI do comprador
+aside.menu.sells=Ventas
