--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -30,6 +30,9 @@ configuration.legend=Configuración
 configuration.users.title=Configuración de usuarios
 configuration.profile.title=Configuración de perfil
 configuration.models.title=Configuración de modelos
+configuration.panel.user=Apartado para la configuración de usuarios
+configuration.panel.model=Apartado para la configuración de modelos
+configuration.panel.perfil=Apartado para la configuración del perfil
 
 ##Edit user messages
 user.edit = Editar usuario
@@ -55,18 +58,18 @@ user.list.role.sort=Ordenar por el rol
 #User messages
 user.add.legend=AÃ±adir usuario
 user.add.password=ContraseÃ±a
-user.add.new.password=Nueva contraseñaa
-user.add.new.password.confirm=Confirmar nueva contraseñaa
+user.add.new.password=Nueva contraseña
+user.add.new.password.confirm=Confirmar nueva contraseña
 user.add.password.placeholder=Introduzca la contraseña...
-user.add.password.valid.feedback=Contraseñaa válida
-user.add.password.invalid.feedback=La contraseñaa debe ser de entre 7 y 24 caracteres
+user.add.password.valid.feedback=Contraseña válida
+user.add.password.invalid.feedback=La contraseña debe ser de entre 7 y 24 caracteres
 
 ##profileOptions message
 profile.modify=Modificar datos del perfil
 profile.name.change=Cambiar nombre y apellidos
-profile.passwd.change=Cambiar la contraseñaa
+profile.passwd.change=Cambiar la contraseña
 button.change.name=Modificar nombre
-button.change.passwd=Modificar contraseñaa
+button.change.passwd=Modificar contraseña
 
 ##model messages
 model.add.legend=Añaadir un modelo
@@ -118,4 +121,6 @@ sells.sell.profit.sort=Ordenar por ganancia
 sells.buyer.name.sort=Ordenar por nombre del comprador
 sells.buyer.dni.sort=Ordenar por DNI del comprador
 aside.menu.sells=Ventas
+add.sell.legend=Realizar una venta
+table.header.sell=Realizar venta
 
