--- a/src/main/resources/messages_ga.properties
+++ b/src/main/resources/messages_ga.properties
@@ -29,6 +29,9 @@ configuration.legend=Configuración
 configuration.users.title=Configuración de usuarios
 configuration.profile.title=Configuración de perfil
 configuration.models.title=Configuración de modelos
+configuration.panel.user=Apartado para a configuración de usuarios
+configuration.panel.model=Apartado para aa configuración de modelos
+configuration.panel.perfil=Apartado para aa configuración do perfil
 
 ##Edit user messages
 user.edit = Editar usuario
@@ -54,7 +57,7 @@ user.list.role.sort=Ordenar polo rol
 #addUser messages
 user.add.legend=Engadir usuario
 user.add.password=Contrasinal
-user.add.new.password=Nova contrasinal
+user.add.new.password=Novo contrasinal
 user.add.new.password.confirm=Confirmar nova contrasinal
 user.add.password.placeholder=Introduza o contrasinal...
 user.add.password.valid.feedback=Contrasinal válido
@@ -115,3 +118,5 @@ sells.sell.profit.sort=Ordenar pola ganancia
 sells.buyer.name.sort=Ordenar polo nome do comprador
 sells.buyer.dni.sort=Ordenar polo DNI do comprador
 aside.menu.sells=Ventas
+add.sell.legend=Realizar unha venta
+table.header.sell=Realizar venta
